--- a/app/templates/ticket_form.html
+++ b/app/templates/ticket_form.html
@@ -162,7 +162,7 @@
   <h6 class="mb-2">Finalisation</h6>
   <div class="row g-2">
     <div class="col-md-6">
-      <label class="form-label">Retour vers magasin</label>
+      <label class="form-label">Retour magasin</label>
       <textarea name="retour_magasin" class="form-control" placeholder="Instructions pour le magasin">{{ vals.get('retour_magasin','') }}</textarea>
     </div>
     <div class="col-md-6">
