--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1002,3 +1002,6 @@ textarea.form-control {
   /* Pagination/info compacter */
   .dataTables_wrapper .dataTables_paginate .paginate_button { padding: .25rem .5rem !important; }
   .dataTables_wrapper .dataTables_info { padding-top: .35rem; }
+
+  .w-80 { width: 80% !important; }
+  @media (max-width: 576px) { .w-80 { width: 100% !important; } }
